[name] Implement hb_ot_name_get_names()

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -34,6 +34,7 @@ HB_BASE_sources = \
 	hb-ot-kern-table.hh \
 	hb-ot-maxp-table.hh \
 	hb-ot-name-table.hh \
+	hb-ot-name.cc \
 	hb-ot-os2-table.hh \
 	hb-ot-os2-unicode-ranges.hh \
 	hb-ot-post-macroman.hh \
